--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.password=@Aplicaciones@TecnologiaInternet@2021
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML5
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=10MB
+spring.mvc.contentnegotiation.favor-parameter=true
+spring.mvc.contentnegotiation.media-types.pdf=aplication/pdf
