--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
 	  <version>2.7.7</version>
 	  <scope>provided</scope>
 	 </dependency>
+          <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.26</version>
+        </dependency>
 	</dependencies>
 
 	<build>
